// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations removing 1`] = `
"/ (directory)
└── a (directory)
    └── c (file)"
`;

exports[`mutations removing 2`] = `
"/ (directory)
└── a (directory)"
`;

exports[`mutations removing 3`] = `"/ (directory)"`;

exports[`mutations trailing slashes 1`] = `
"/ (directory)
└── a (directory)
    └── d (file)"
`;

exports[`mutations writing 1`] = `
"/ (directory)
├── a (directory)
│   └── b (directory)
│       └── c (directory)
│           └── d (directory)
│               └── e (file)
├── b (directory)
├── c (file)
└── f (directory)
    └── g (directory)
        └── h (directory)
            └── i (directory)
                └── j (directory)"
`;
